# defsim

./: .gitignore  CLAUDE.md  Cargo.toml  design.md
scenarios/: README.md  scenario_multi_wave.yaml  scenario_performance_test.yaml  scenario_plane.yaml  scenario_simple_test.yaml  scenario_validation_test.yaml
src/: logging.rs  main.rs  scenario.rs  simulation.rs
src/models/: command_post.rs  common.rs  launcher.rs  missile.rs  mod.rs  sensor.rs  target.rs  traits.rs
